committed by Shilpa Goel

--- a/src/main/resources/templates/Home/index.html
+++ b/src/main/resources/templates/Home/index.html
@@ -32,7 +32,7 @@
                 <i class="glyphicon glyphicon-list-alt"></i>&nbsp; Dashboard
             </a>
 
-            <a th:href="@{/new}" class="btn btn-lg btn-primary">
+            <a th:href="@{/add}" class="btn btn-lg btn-primary">
                 <i class="glyphicon glyphicon-bullhorn"></i>&nbsp; Raise a Review Request
             </a>
 
