--- a/src/main/resources/templates/Request/details.html
+++ b/src/main/resources/templates/Request/details.html
@@ -18,7 +18,7 @@
 		    <dt th:text="'Description: ' + ${requestBean.description}" />
 		    <dt th:text="'Created By: ' + ${requestBean.createdBy}" />
 		    <dt th:text="'Created At: ' + ${requestBean.createdAt}" />
-		    <a href="/new">Submit another request</a>
+		    <a href="/add">Submit another request</a>
 	    </dl>
     </div>
 </div>    
