--- a/src/main/resources/templates/Request/view.html
+++ b/src/main/resources/templates/Request/view.html
@@ -57,7 +57,7 @@
 							<tr>
 								<td style= "width:15%"><button class="btn btn-primary" onclick ="window.location='status'">Check Status</button></td>
 								<td style= "width:15%"><button class="btn btn-primary" onclick ="window.location='reply'">Reply</button></td>
-								<td style= "width:15%"><button class="btn btn-primary" onclick ="window.location='new'">Edit</button></td>
+								<td style= "width:15%"><button class="btn btn-primary" onclick ="window.location='add'">Edit</button></td>
 								<td style= "width:15%"><button class="btn btn-primary" onclick ="window.location=''">Delete</button></td>
 
 								
