--- a/src/main/resources/templates/topnav.html
+++ b/src/main/resources/templates/topnav.html
@@ -18,7 +18,7 @@
                 <ul class="nav navbar-nav">
                     <li><a th:href="@{/dashboard}">Dashboard</a></li>
                     <li><a th:href="@{/list}">All Requests</a></li>
-                    <li><a th:href="@{/new}">Raise a New Request</a></li>
+                    <li><a th:href="@{/add}">Raise a New Request</a></li>
                 </ul>
             <!-- Top Navigation Right -->
             <!--  
