--- a/src/main/resources/templates/Request/add.html
+++ b/src/main/resources/templates/Request/add.html
@@ -197,12 +197,12 @@ function showDiv(elem){
 						<div class="form-group col-xs-6">
 						<label for="tags">Tags</label> <input name="tags"
 							style="border: 1px solid black" type="text" class="form-control"
-							 id="tags" placeholder="Tag" />
+							 id="tags" placeholder="Tags" />
 					</div>
 					<div class="form-group col-xs-6">
 						<label for="owner">Owner</label> <input name="owner"
 							style="border: 1px solid black" type="text" class="form-control"
-							 id="owner" placeholder="Tag" value = "QA"/>
+							 id="owner" placeholder=" QA" value = "QA"/>
 					</div>
 					<div class="form-group" style="margin-right: -10px">
 						<label for="description"
