--- a/src/main/resources/templates/Request/listing.html
+++ b/src/main/resources/templates/Request/listing.html
@@ -166,6 +166,10 @@ $(function(){
 						</div>
 						<table class="table">
 							<tr>
+								<th>Request Title</th>
+								<td><span th:text="${request.requestTitle}"></span></td>
+							</tr>
+							<tr>
 								<th>Short Description</th>
 								<td><span th:text="${request.shortDescription}"></span></td>
 							</tr>
